<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">책스캔</string>
    <string name="hint_start">책 페이지가 다 보이도록 비춰 주세요</string>
    <string name="auto_shot">자동 촬영</string>
    <string name="shoot">촬영</string>
    <string name="new_session">새 묶음</string>
    <string name="make_pdf">PDF</string>
    <string name="mode_auto">쪽: 자동</string>
    <string name="mode_single">쪽: 한 쪽</string>
    <string name="mode_spread">쪽: 두 쪽</string>
    <string name="open_folder">📁 폴더</string>
    <string name="last_shot">방금 찍은 사진</string>
</resources>
